ref21480 - Fixed some errors.

--- a/app/views/notifier/active_with_approval.text.erb
+++ b/app/views/notifier/active_with_approval.text.erb
@@ -1,4 +1,4 @@
-Dear <%= @agent.last_name %>, <%= @agent.first_name %>,
+Dear <%= @agent.first_name %> <%= @agent.last_name %>,
 
 The Member <%= @member.full_name %>, has submited to be enrolled. This member needs to be approved.
     
