--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -5,7 +5,7 @@
 	  <td colspan="2"> <%= t('activerecord.attributes.operation.operation_date') %>: <%= @operation.operation_date %></td>
 	</tr>
 	<tr> 
-	  <td> <%= t('activerecord.attributes.operation.description') %>: <%= @operation.description %> </td>
+	  <td> <%= t('activerecord.attributes.operation.description') %>: <%= @operation.description.html_safe %> </td>
 	  <td> <%= t('activerecord.attributes.operation.created_by') %>: <%= @operation.created_by.username %> </td>
 	</tr>
 	<tr> 
