--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -5,8 +5,8 @@
       <th> <%= t('activerecord.attributes.credit_card.number') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.expire_date') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.last_successful_bill_date') %> </th>
-      <th> <%= t('actions') %> </th>
-      <th> <%= t('actions') %> </th>
+      <th> <%= 'Blacklisted' %> </th>
+      <th> <%= 'Acivation' %> </th>
     </tr>
   </thead>
   <tbody>
@@ -36,11 +36,6 @@
             <%= t('activerecord.attributes.credit_card.blacklisted') %>
           <% end %>    
         <% end %>
-        <% if cc.can_be_blacklisted? %>
-          <%= form_for @cc, :as => :credit_card, :url => credit_card_set_as_blacklisted_path(:credit_card_id => cc.id), do |f|  %> 
-            <%= submit_tag 'BlackList', :name => 'blacklist', :class=> "btn btn-warning confirm" %>
-          <% end %>
-        <% end %> 
       </td>
       <td>
         <%= t('activerecord.attributes.credit_card.active') if cc.active %>
