--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -2,7 +2,7 @@
   <% if !@member.new_record? %>
   <tr class="control-group"> 
     <td colspan="4">
-    <%= t('activerecord.attributes.member.member_group_type') %>:
+    <%= t('activerecord.attributes.member.member_classification_type') %>:
     <% if !@member_group_types.nil? %>
       <%= f.select :member_group_type_id, 
                   options_from_collection_for_select(@member_group_types, "id","name", 
@@ -30,6 +30,17 @@
             <%= f.text_field :first_name, :class => 'text_field' %> 
           </td>  
         </tr>
+        <tr class = "control-group">
+          <th>
+            <%= f.label :gender, t('activerecord.attributes.member.gender'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <select id="member_gender" name="member[gender]">
+              <option value="M">Male</option>
+              <option value="F">Female</option>
+            </select>
+          </td>  
+        </tr>        
         <tr class = "control-group">
           <th>
             <%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline' %>
@@ -112,6 +123,18 @@
           <td> 
             <%= f.text_field :phone_number, :class => 'text_field' %> 
             <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.phone_number_help')} %>
+          </td>  
+        </tr>
+        <tr class = "control-group">
+          <th>
+            <%= f.label :type_of_phone_number, t('activerecord.attributes.member.type_of_phone_number'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <select id="type_of_phone_number" name="member[type_of_phone_number]">
+              <option value="Home">Home</option>
+              <option value="Mobile">Mobile</option>
+              <option value="Other">Other</option>
+            </select>
           </td>  
         </tr>
         <tr class = "control-group">
