ref#21652 - added method to log in as member.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,5 +1,6 @@
 <div class="page-header">
   <%= render :partial => "shared/member_information" %>
+  <%= link_to 'Log in as member', login_as_member_path, :class => "btn btn-success btn-large-w" %>
 </div>
 
 <div class="row">
