--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -69,21 +69,15 @@
       <div class="span4">
         <%= link_to "Add a note", new_member_note_path, :class => "btn btn-success btn-large-w" %>
       </div>
-      <div class="span4">
-        <% disable_applied = @current_member.applied? == false  %>
-        <% if disable_applied %>
-          <%= link_to "Approve", "#", :class => "btn btn-large-w disabled" %>
-        <% else %>
+      <% disable_applied = @current_member.applied? == false  %>
+      <% unless disable_applied %>
+        <div class="span4">
           <%= link_to "Approve", member_approve_path, :class => "btn btn-large-w btn-info", :confirm => t('are_you_sure'), :method => :post %>
-        <% end %>
-      </div>
-      <div class="span4">
-        <% if disable_applied %>
-          <%= link_to "Reject", "#", :class => "btn btn-large-w disabled" %>
-        <% else %>
+        </div>
+        <div class="span4">
           <%= link_to "Reject", member_reject_path, :class => "btn btn-large-w btn-danger", :confirm => t('are_you_sure'), :method => :post %>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     </div>  
     
     <div class="row-fluid" style="margin-top: 8px;">
