--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -140,8 +140,8 @@
           </th>
           <td> 
             <select id="type_of_phone_number" name="member[type_of_phone_number]">
+              <option value="Mobile" selected="selected">Mobile</option>             
               <option value="Home">Home</option>
-              <option value="Mobile">Mobile</option>
               <option value="Other">Other</option>
             </select>
           </td>  
