ref#21650 - Moved logic from members controller blacklist method to the model.

--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -5,8 +5,8 @@
       <th> <%= t('activerecord.attributes.credit_card.number') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.expire_date') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.last_successful_bill_date') %> </th>
-      <th> <%= 'Blacklisted' %> </th>
-      <th> <%= 'Acivation' %> </th>
+      <th> <%= t('blacklisted') %> </th>
+      <th> <%= t('acivation') %> </th>
     </tr>
   </thead>
   <tbody>
