--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,6 @@
 <%- model_class = @product.class -%>
 <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
                                  :default => "Edit #{model_class.model_name.human}") %></h1>
-<%= render :partial => 'form' %>
+<%= form_for @product, :url => product_path(:id => @product.id), :html => { :class => 'form-horizontal' } do |f| %>
+  <%= render :partial => 'form', :locals => { :f => f } %>
+<% end %>	
