--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,7 @@
 <%- model_class = @product.class -%>
 <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
                                :default => "New #{model_class.model_name.human}") %></h1>
-<%= render :partial => 'form' %>
+<%= form_for @product, :html => { :class => 'form-horizontal' } do |f| %>
+  <%= render :partial => 'form', :locals => { :f => f } %>
+<% end %>
+
