--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,44 +1,50 @@
-<%- model_class = Product.new.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:sku) %></th>
-      <th><%= model_class.human_attribute_name(:recurrent) %></th>
-      <th><%= model_class.human_attribute_name(:stock) %></th>
-      <th><%= model_class.human_attribute_name(:weight) %></th>
-      <th><%= model_class.human_attribute_name(:club_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= link_to product.id, product_path(@current_partner.prefix, @current_club.name, product) %></td>
-        <td><%= product.name %></td>
-        <td><%= product.sku %></td>
-        <td><%= product.recurrent %></td>
-        <td><%= product.stock %></td>
-        <td><%= product.weight %></td>
-        <td><%= product.club_id %></td>
-        <td><%=l product.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_product_path(@current_partner.prefix, @current_club.name, product), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      product_path(@current_partner.prefix, @current_club.name, product),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
+<section>
+  <div class="page-header">
+    <h1>Search</h1>
+    <% if can? :create, @current_agent %>
+      <%= link_to(new_product_path, :class => "btn btn-primary btn_on_header") do %> 
+        <i class="icon-plus"></i> New Product
+      <% end %>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_product_path,
-            :class => 'btn btn-primary' %>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th> id </th>
+        <th> name </th>
+        <th> sku </th>
+        <th> recurrent </th>
+        <th> stock </th>
+        <th> weight </th>
+        <th> club_id </th>
+        <th> created_at </th>
+        <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <td><%= link_to product.id, product_path(@current_partner.prefix, @current_club.name, product) %></td>
+          <td><%= product.name %></td>
+          <td><%= product.sku %></td>
+          <td><%= product.recurrent %></td>
+          <td><%= product.stock %></td>
+          <td><%= product.weight %></td>
+          <td><%= product.club_id %></td>
+          <td><%=l product.created_at %></td>
+          <td>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_product_path(@current_partner.prefix, @current_club.name, product), :class => 'btn btn-mini' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        product_path(@current_partner.prefix, @current_club.name, product),
+                        :method => :delete,
+                        :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                        :class => 'btn btn-mini btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+</section>
