--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -5,14 +5,14 @@
       <% if @current_member %>
         <ul class="nav nav-list">
           <li class="nav-header">Member</li>
-          <li><%= link_to "Member Dashboard", show_member_path %></li>
-          <li><%= link_to "Club Dashboard", members_path %></li>
+          <li><%= link_to "Member Dashboard", show_member_path if can?(:read,Member) %></li>
+          <li><%= link_to "Club Dashboard", members_path if can?(:read,Club) %></li>
         </ul>
       <% elsif @current_partner %>
         <ul class="nav nav-list">
           <li class="nav-header">General</li>
-          <li><%= link_to "Domains", domains_path  %></li>
-          <li><%= link_to "Clubs", clubs_path  %></li>
+          <li><%= link_to "Domains", domains_path if can?(:read,Domain) %></li>
+          <li><%= link_to "Clubs", clubs_path if can?(:read,Club) %></li>
           <li><%= link_to "Dashboard", admin_partner_dashboard_path if params[:action] != 'dashboard' %></li>
         </ul>
       <% end %>
