Add synchronization tooling to backed; fixes #21663; fixes #21655
* added filter for sync status in members listing;
* added a Sync Status tab to member show page;
* allow agents to modify api_id, force synchronization, view remote data
* hack around Drupal sending body not respecting their own content type (JSON)
* enabled Password Reset
* added Member#autologin_url to cache remote's login_token (only path segment)
* added rake task members:refresh_autologin_url (refreshes ALL members)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,6 +93,18 @@ div.dataTables_filter input {
   width:33%;
 }
 
+.label.label-secondary {
+  float: right;
+  font-size: 70%;
+  margin-top: 0.1em;
+}
+
+.tab-toolbar {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 0.5em;
+  padding-bottom: 0.5em;
+}
+
 .btn_on_header {
   float: right; 
   margin-top: -25px;
