--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -11,8 +11,7 @@
       </th>
       <th> <%= t('activerecord.attributes.credit_card.expire_date') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.last_successful_bill_date') %> </th>
-      <th> <%= t('blacklisted') %> </th>
-      <th> <%= t('acivation') %> </th>
+      <th> <%= t('actions') %> </th>
     </tr>
   </thead>
   <tbody>
@@ -45,8 +44,6 @@
             <%= t('activerecord.attributes.credit_card.blacklisted') %>
           <% end %>    
         <% end %>
-      </td>
-      <td>
         <%= t('activerecord.attributes.credit_card.active') if cc.active %>
         <% if cc.can_be_activated? %>
           <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id), do |f| %>
